--- a/rp/index.html
+++ b/rp/index.html
@@ -40,8 +40,8 @@
 				<div class="menu-list ui-menu">
 
 					<div class="ui-menu-item clearfix">
-						
-						<a href="#1" class="ui-menu-item-department">内科</i> 
+
+						<a href="#1" class="ui-menu-item-department">内科</a>
 						<a href="#2" class="ui-menu-item-disease">高血压</a>
 						<a href="#3" class="ui-menu-item-disease">冠心病</a>
 
@@ -74,7 +74,7 @@
 
 					<div class="ui-menu-item clearfix">
 						
-						<a href="#1" class="ui-menu-item-department">外科</i> 
+						<a href="#1" class="ui-menu-item-department">外科</a>
 						<a href="#2" class="ui-menu-item-disease">肾结石</a>
 						<a href="#3" class="ui-menu-item-disease">脑外伤</a>
 
