--- a/rp/index1.html
+++ b/rp/index1.html
@@ -47,7 +47,81 @@
 	<div id="nav" class="nav">
 		<div class="wrap">
 			<div class="link menu">全部科室
-				<div class="menu-list"></div>
+				<div class="menu-list">
+					<div class="ui-menu-item clearfix">
+						<a href="#" class="ui-menu-item-department">内科</a>
+						<a href="#" class="ui-menu-item-disease">高血压</a>
+						<a href="#" class="ui-menu-item-disease">冠心病</a>
+						<div class="ui-menu-item-detail">
+							<div class="ui-menu-item-detail-group">
+								<div class="ui-menu-item-detail-group-caption">内科</div>
+								<div class="ui-menu-item-detail-group-list">
+									<a href="#1">心血管内科</a>
+									<a href="#1">神经内科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">心血管内科</a>
+									<a href="#1">神经内科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">心血管内科</a>
+									<a href="#1">神经内科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="ui-menu-item clearfix">
+						<a href="#" class="ui-menu-item-department">外科</a>
+						<a href="#" class="ui-menu-item-disease">脑外伤</a>
+						<a href="#" class="ui-menu-item-disease">肾结石</a>
+						<div class="ui-menu-item-detail">
+							<div class="ui-menu-item-detail-group">
+								<div class="ui-menu-item-detail-group-caption">外科</div>
+								<div class="ui-menu-item-detail-group-list">
+									<a href="#1">神经外科</a>
+									<a href="#1">功能神经外科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">心血管内科</a>
+									<a href="#1">神经内科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">心血管内科</a>
+									<a href="#1">神经内科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+								</div>
+							</div>
+							<div class="ui-menu-item-detail-group">
+								<div class="ui-menu-item-detail-group-caption">外科常见疾病</div>
+
+								<div class="ui-menu-item-detail-group-list">
+									<a href="#1">神经外科</a>
+									<a href="#1">功能神经外科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">心血管内科</a>
+									<a href="#1">神经内科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">心血管内科</a>
+									<a href="#1">神经内科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+									<a href="#1">内分泌科</a>
+									<a href="#1">血液科</a>
+								</div>
+
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<a href="#" class="link">按医院挂号</a>
 			<a href="#" class="link">按科室挂号</a>
