--- a/rp/index1.html
+++ b/rp/index1.html
@@ -133,9 +133,30 @@
 	<!-- 导航栏end -->
 
 	<!-- 横幅start -->
-	<div id="banner" class="banner">
-		<!-- 轮播图start -->		
-		<div class="banner-slider"></div>	
+	<div id="banner" class="banner clearfix">
+		<!-- 轮播图start -->
+		<div class="banner-slider ui-slider">
+			<!-- 轮播图图片start -->
+			<div class="ui-slider-wrap clearfix">
+				<a href="#" class="item"><img src="img/banner_1.jpg" alt="banner-1" width=" " height=""/></a>
+				<a href="#" class="item"><img src="img/banner_2.jpg" alt="banner-2" width=" " height=""/></a>
+				<a href="#" class="item"><img src="img/banner_3.jpg" alt="banner-3" width=" " height=""/></a>
+			</div>
+			<!-- 轮播图图片end -->
+			<!-- 轮播图左右侧按钮start -->
+			<div class="ui-slider-arrow">
+				<a href="#" class="item left">&nbsp;</a>
+				<a href="#" class="item right">&nbsp;</a>
+			</div>
+			<!-- 轮播图左右侧按钮end -->
+			<!-- 轮播图切换图按钮start -->
+			<div class="ui-slider-process">
+				<a href="#" class="item item_focus">&nbsp;</a>
+				<a href="#" class="item ">&nbsp;</a>
+				<a href="#" class="item ">&nbsp;</a>
+			</div>
+			<!-- 轮播图切换图按钮end -->
+		</div>
 		<!-- 轮播图end -->
 
 		<!-- 快速查询start -->
@@ -182,7 +203,7 @@
 				<a href="#" class="link">账号找回</a>
 				<a href="#" class="link">常见问题</a>
 			</div>
-		</div>	
+		</div>
 		<!-- 帮助中心end -->
 	</div>
 	<!-- 横幅end -->
@@ -190,7 +211,7 @@
 	<!-- 内容start -->
 	<div id="content" class="content">
 		<div class="wrap clearfix">
-		<!-- 标签start -->		
+		<!-- 标签start -->
 		<div class="content-tab">
 			<div class="caption">
 				<a href="#" class="item item_focus">医院</a>
@@ -255,7 +276,7 @@
 				</div>
 				<div class="item" style="display:none;">科室内容</div>
 			</div>
-		</div>		
+		</div>
 		<!-- 标签end -->
 
 		<!-- 最近公告start -->
@@ -271,7 +292,7 @@
 				<a href="#" class="link">道外医院特需门诊暂停更新号同源...</a>
 				<a href="#" class="link">防护策略升级通知</a>
 			</div>
-		</div>	
+		</div>
 		<!-- 最近公告end  -->
 		<!-- 停诊公告start  -->
 		<div class="content-close">
@@ -286,7 +307,7 @@
 				<a href="#" class="link">道外医院特需门诊暂停更新号同源...</a>
 				<a href="#" class="link">防护策略升级通知</a>
 			</div>
-		</div>	
+		</div>
 		<!-- 停诊公告end  -->
 		</div>
 	</div>
