提交代码，书写新的医院同意挂号平台页面之header页面。

--- a/rpextend/index.html
+++ b/rpextend/index.html
@@ -10,13 +10,14 @@
 
 <body>
     <div class="header">
-        <div class="warpExtend">
+        <div class="wrapExtend w">
             <div class="logo">
-                <img src="" width="" height="" alt=""/>
+                <img src="img/logo.jpg" width="75" height="60" alt="统一挂号平台"/>
+                <p class="header-title">北京市预约挂号统一平台</p>
             </div>
             <div class="header-content">
-                <div class="input">
-                    <i class="search"></i>
+                <div class="header-input">
+                    <i class="search">O</i>
                     <input type="text"  placeholder=""/>
                 </div>
                 <button class="btn">搜医院</button>
