@提交/修改代码；@修改内容              添加：添加头部内容

--- a/rpextend/index.html
+++ b/rpextend/index.html
@@ -10,26 +10,30 @@
 
 <body>
     <div class="header">
-        <div class="wrapExtend w">
+        <div class="wrapExtend">
             <div class="logo">
-                <img src="img/logo.jpg" width="75" height="60" alt="统一挂号平台"/>
-                <p class="header-title">北京市预约挂号统一平台</p>
+                <img src="img/logo.jpg"/>
+                <div class="header-title">北京市预约挂号统一平台</div>
             </div>
             <div class="header-content">
                 <div class="header-input">
-                    <i class="search">O</i>
-                    <input type="text"  placeholder=""/>
+                    <img src="img/searchButton.png"/>
+                    <div class="input-info">
+                        <input type=""  placeholder="请输入医院或科室名称"/>
+                    </div>
                 </div>
-                <button class="btn">搜医院</button>
-                <button class="btn">搜科室</button>
+                <div class="header-btn">
+                    <button class="btn">搜医院</button>
+                    <button class="btn">搜科室</button>
+                </div>
             </div>
             <div class="header-right-info">
-                <a class="link">登陆/注册</a>
-                <a class="link">帮助中心</a>
+                <a class="link login">登陆/注册</a>
+                <a class="link help">帮助中心</a>
             </div>
         </div>
     </div>
-    <div class="nav"></div>
+    <div class="nav wrapExtend"></div>
     <div class="banner"></div>
     <div class="content"></div>
     <div class="footer"></div>
