@提交/修改代码；@修改内容                                    添加：重新写头部左侧浮动和右侧浮动

--- a/rpextend/index.html
+++ b/rpextend/index.html
@@ -11,32 +11,43 @@
 <body>
     <div class="header">
         <div class="wrapExtend">
-            <div class="logo">
-                <img src="img/logo.jpg"/>
-                <div class="header-title">北京市预约挂号统一平台</div>
-            </div>
+            <a class="header-logo" href="">
+                <img src="img/logo.jpg" />
+                <span>北京市预约挂号统一平台</span>
+            </a>
             <div class="header-content">
-                <div class="header-input">
-                    <img src="img/searchButton.png"/>
-                    <div class="input-info">
-                        <input type=""  placeholder="请输入医院或科室名称"/>
+                <div class="header-search">
+                    <div class="header-img">
+                        <img src="img/searchButton.png" />
+                    </div>
+                    <div class="header-input">
+                        <input type="text" placeholder="请输入医院或科室名称" />
                     </div>
                 </div>
-                <div class="header-btn">
-                    <button class="btn">搜医院</button>
-                    <button class="btn">搜科室</button>
-                </div>
+                <button class="btn">搜医院</button>
+                <button class="btn">搜科室</button>
             </div>
-            <div class="header-right-info">
-                <a class="link login">登陆/注册</a>
-                <a class="link help">帮助中心</a>
+            <div class="header-info">
+                <a class="link">登陆/注册</a>
+                <a class="link">帮助中心</a>
             </div>
         </div>
     </div>
-    <div class="nav wrapExtend"></div>
+    <div class="nav wrapExtend">
+
+    </div>
     <div class="banner"></div>
     <div class="content"></div>
     <div class="footer"></div>
+    <div class="floater">
+        <img src="img/attationQrc.png"/>
+    </div>
+    <div class="importad">
+        <span>北京预约挂号统一平台</span>
+    </div>
+    <div class="close">
+
+    </div>
     <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="js/ui.js"></script>
 </body>
