提交代码，修改class名字

--- a/rpextend/index.html
+++ b/rpextend/index.html
@@ -42,7 +42,7 @@
     <div class="floater">
         <img src="img/attationQrc.png"/>
     </div>
-    <div class="importad">
+    <div class="import-ad">
         <span>北京预约挂号统一平台</span>
     </div>
     <div class="close">
