提交代码,添加nav模块

--- a/rpextend/index.html
+++ b/rpextend/index.html
@@ -33,10 +33,24 @@
             </div>
         </div>
     </div>
-    <div class="nav wrapExtend">
-
+    <div class="nav">
+            <div class="wrapExtend">
+                <div class="ul-item">
+                    <ul>
+                        <li>全部科室</li>
+                        <li>按医院挂号</li>
+                        <li>按科室挂号</li>
+                    </ul>
+                </div>
+            </div>
     </div>
-    <div class="banner"></div>
+    <div class="banner">
+        <div class="banner-item wrapExtend">
+            <div class="banner-box">
+
+            </div>
+        </div>
+    </div>
     <div class="content"></div>
     <div class="footer"></div>
     <div class="floater">
