@提交/修改代码；@修改内容                                    添加：提交footer和左侧滑动栏。

--- a/rpextend/index.html
+++ b/rpextend/index.html
@@ -36,28 +36,49 @@
     <div class="nav">
             <div class="wrapExtend">
                 <div class="ul-item">
-                    <ul>
-                        <li>全部科室</li>
-                        <li>按医院挂号</li>
-                        <li>按科室挂号</li>
-                    </ul>
+                    <p class="active">全部科室</p>
+                    <p class="">按医院挂号</p>
+                    <p class="">按科室挂号</p>
                 </div>
             </div>
     </div>
-    <div class="banner">
-        <div class="banner-item wrapExtend">
-            <div class="banner-box">
+    <div class="banner wrapExtend">
+        <div class="banner-box">
+            <div class="banner-nav">
+            </div>
+            <div class="banner-shuff">
 
             </div>
         </div>
     </div>
     <div class="content"></div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="wrapExtend">
+            <p class="info">京ICP备05021558号-24</p>
+            <p class="phone">电话挂号010-114</p>
+            <div class="service">
+                <a href="">联系我们</a>
+                <a href="">合作伙伴</a>
+                <a href="">法律声明</a>
+                <a href="">服务协议</a>
+                <a href="">意见反馈</a>
+                <a href="">扫一扫</a>
+            </div>
+        </div>
+    </div>
     <div class="floater">
         <img src="img/attationQrc.png"/>
     </div>
     <div class="import-ad">
-        <span>北京预约挂号统一平台</span>
+        <span class="title">北京预约挂号统一平台</span>
+        <span class="info-header">域名调整公告</span>
+        <div class="info-content">根据国家互联网网站域名管理的有关要求，2019年4月1日起，北京市预约挂号统一平台的域名将由www.bjguahao.gov.cn 调整为<a href="">www.114yygh.com。</a></div>
+        <p class="line">---------------------</p>
+        <div class="import-ad-footer">
+            <p class="notice">特此公告。</p>
+            <p class="info">北京市卫生健康委员会</p>
+            <p class="date">2019年3月28日</p>
+        </div>
     </div>
     <div class="close">
 
